--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript{
+    ext {
+        version_retrofit = "2.9.0"
+        version_retrofit_coroutines_adapter = "0.9.2"
+        version_moshi = "1.13.0"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
+
