--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript{
         version_retrofit = "2.9.0"
         version_retrofit_coroutines_adapter = "0.9.2"
         version_moshi = "1.13.0"
+        version_coroutine = "1.3.7"
+        version_kotlin_coroutines = "1.3.7"
     }
 }
 
