--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript{
         version_moshi = "1.13.0"
         version_coroutine = "1.3.7"
         version_kotlin_coroutines = "1.3.7"
+        version_glide = "4.14.2"
     }
 }
 
