--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
 
     //Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
+
+    //Recyclerview
+    implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
 }
