--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript{
         version_coroutine = "1.3.7"
         version_kotlin_coroutines = "1.3.7"
         version_glide = "4.14.2"
+        version_recyclerview = "1.2.0-alpha05"
     }
 }
 
