--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+    id 'kotlin-android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -72,4 +75,11 @@ dependencies {
 
     //Recyclerview
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+
+    //Parcelize
+    //implementation "org.jetbrains.kotlinx:kotlinx-parcelize:1.3.9"
+
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
