--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ buildscript{
         version_kotlin_coroutines = "1.3.7"
         version_glide = "4.14.2"
         version_recyclerview = "1.2.0-alpha05"
+        nav_version = "2.3.5"
+    }
+
+    dependencies{
+        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
     }
 }
 
